# serializer version: 1
# name: test_finalization_sets_translation_strings_in_empty_quotes_headings
  '<div class="quote-heading" data-noquote="1">Quoted message:</div>'
# ---
# name: test_finalization_sets_translation_strings_in_spoilers_buttons
  '<button class="spoiler-reveal" type="button">Reveal spoiler</button>'
# ---
